--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,13 @@
   <div class="row justify-content-center">
     <div class=" row col-12 text-center justify-content-center">
       <div class=" card m-5 col-6 ">
-        <div class=" card-header bg-info">
-        <i class="far fa-user fs-2 text mt-2"></i>
-       <p class="card-title fs-4 text">Login</p>
+        <div class=" card-header bg-info row justify-content-center">
+          <p class="card-title fs-3 text-white">Login</p>
+          <div class=" col-6 align-items-center justify-content-center">
+            <img src="/imgs/teacher.png" alt="" class="img-fluid">
+          </div>
+          
+       
         </div>
         <div class="card-body row justify-content-center">
     <section class="col mt-3">
