--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -6,7 +6,7 @@
               <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
                 <div>
                   <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
-                  <h3 class="card-title ">Student SignUp</h3>
+                  <p class="card-title fs-6 text-center">Student SignUp</p>
                 </div>
               </div>
               <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
@@ -26,12 +26,12 @@
                         <input type="text"class="form-control" id="userName" name="userName">
                     
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <label for="exampleInputEmail1" class="form-label">Email Address</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
-                      <label for="classId" class="form-label">ClassId</label>
+                      <label for="classId" class="form-label">Class Id</label>
                       <input type="text" class="form-control" id="classId" name="classId">
                     </div>
                     <div class="mb-3">
