--- a/views/teacher/profile.ejs
+++ b/views/teacher/profile.ejs
@@ -1,67 +1,81 @@
 <%- include('../partials/header') -%>
-<div class="container">
-    <div class="card row mt-5">
-        <div class="col">
-            <div class="row">
-                <p class="col-4">
-                    <strong>User Name</strong>: <%= user.userName %>
-                </p>
-                <p class="col-4"><strong>Email</strong>: <%= user.email %></p>
-                <a href="/logout" class="col-2 btn btn-primary">Logout</a>
+<div class="container mt-5 bg-primary">
+    <div class="row justify-content-center">
+       <div class="m-5 card col-8 justify-content-center bg-info">
+        <div class=" row bg-white justify-content-evenly">
+            <p class="col-4 ">
+                <strong>User Name</strong>: <%= user.userName %>
+            </p>
+            
+            <div class="col-4 d-flex row justify-content-center align-items-center">
+                <a href="/logout" class=" btn-sm btn btn-info ">Logout</a>
             </div>
-            <div class="mt-5 card">
-                <div class="row">
-                    <section class="col-6 mapSection">
-                        <h2>Stats</h2>
-                        <form>
-                            <div class="dropdown">
+            
+        </div>
+        <div class="mt-5 mb-5 card">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center row justify-content-center align-items-center">
+                    <h2>Tests</h2>
+                    <div class=" row justify-content-center align-items-center mb-3">
+                        <form class="justify-content-center row" >
+                        <div class="dropdown row">
+                            <div class="col-md-6">
                                 <select
-                                    name="testId"
-                                    class="form-select"
-                                    aria-label="list of spelling test titles"
-                                >
-                                    <option selected>Tests</option>
-                                    <%for(let i =0; i < tests.length; i++) { %>
-                                    <option
-                                        id="testName"
-                                        value="<%=tests[i]._id%>">
-                                         <%=tests[i].title%>
-                                    </option>
-                                    <%} %>
-                                </select>
-                                <button>View Test</button>
+                                name="testId"
+                                class=" col-6 form-select"
+                                aria-label="list of spelling test titles"
+                            >
+                                <option selected disabled>Tests</option>
+                                <%for(let i =0; i < tests.length; i++) { %>
+                                <option
+                                    id="testName"
+                                    value="<%=tests[i]._id%>">
+                                        <%=tests[i].title%>
+                                </option>
+                                <%} %>
+                            </select>
                             </div>
+                            <div class="text-center col-md-4">
+                                <button class="  btn btn-sm btn-info">View Test</button>
+                            </div>
+                            
+                        </div>
                         </form>
 
-                        <% if(selectedTest){%>
-                        <ul>
-                            <% for (word of selectedTest.baseWords) {%>
-                            <li><%=word%></li>
-                            <%}%>
-                        </ul>
-                        <%}%>
-                    </section>
-
-                    <section class="col-6 row linksSection">
+                    <% if(!selectedTest){%>
+                        <p>No Test Selected</p>
+                    <%} else {%> 
+                        <p class="text-center mt-2 fs-5">
+                                <%=selectedTest.title%>
+                        </p>
                         
-                        <section class="tests col-12">
-                            <h3>Tests</h3>
-                            <% if(selectedTest){%>
-                            <a href="#" class="btn-sm btn-primary">Pre-Test</a>
-                            <a href="../tests/test/<%=selectedTest._id%>" class="btn-sm btn-primary"
-                                >Test</a
-                            >
-                            <%}%>
-                            <a
+                        <ul class="list-unstyled text-center">
+                        <% for (word of selectedTest.baseWords) {%>
+                        <li><%=word%></li>
+                        <%}%>
+                        </ul>
+                        <a href="../tests/test/<%=selectedTest._id%>" class="btn-sm btn-primary justify-content-md-center text-center mb-2">
+                        Take Test
+                        </a>
+                        <%}%>
+                    </div>
+                     <a
                                 href="../teacher/add_test"
-                                class="btn-sm btn-primary"
+                                class=" col-6 btn-sm btn-primary"
                                 >Add Tests</a
                             >
-                        </section>
-                    </section>
+                </div>
+                <div class="col-md-4 d-flex row text-center  align-items-center justify-content-center " >
+                    
+                    <h3>Students</h3>
+                   
+                
+                           
+                
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
+    
 </div>
 <%- include('../partials/footer') -%>
