--- a/views/tests/test.ejs
+++ b/views/tests/test.ejs
@@ -1,9 +1,12 @@
 <%- include('../partials/header') -%>
 <main class="container mt-5 bg-primary">
-    <h3 class="text-white"><%=test.title%> Test</h3>
-<div class=" row justify-content-center">
-    <form method="POST" autocomplete="off" class="card m-4 col-8">
-        <p>Press the <span><i class="fas fa-play-circle"></i></span> button to hear the spelling word. Then type the word in the space. </p>
+    <div class="row justify-content-center">
+        <h3 class="text-white text-center mt-3"><%=test.title%> Test</h3>
+        <div class=" card col-10 row mx-5 mt-3 mb-5 justify-content-center align-self-center">
+            <form method="POST"autocomplete="off" class="row justify-content-center align-self-center text-center">
+                 <p class="fs-5 mt-2">Press the <span><i class="fas fa-play-circle"></i></span> button to hear the spelling word. Then type the word in the space. </p>
+                <div class="card col-10 row bg-info mx-5 mt-2 align-self-center">
+                  
         <div class="m-2">
             <h4 class="text-center">Base Words</h4>
             <div class="text-center row mb-2">
@@ -24,15 +27,18 @@
             <%}%>
         </div>
         </div>
-        
-        <div class="row text-center col-6 justify-content-center mt-2">
-            <input type="submit" value="Submit" class="btn btn-info col-6">
-            <a href="/student/profile" class="btn btn-outline-info col-6">Cancel</a>
         </div>
-    </form>
-</div>
+        <div class="row col-4 mt-3 mb-3 text-center justify-content-center align-self-center gap-2">
+            <input type="submit" value="Submit" class="btn btn-info col-md-5">
+            <a href="/student/profile" class="btn btn-outline-info col-md-5">Cancel</a>
+        </div>  
+                
+        
+            </form>
+        </div>
+    </div>
+    
 </main>
-
 
 <script>
     const sayWord = (event) => {
