--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') -%>
+<%- include('../partials/header') -%>
 
 <main class="container mt-5 ">
   <div class="row m-3 ">
@@ -18,4 +18,4 @@
 </main>
     
 
-<%- include('partials/footer') -%>
+<%- include('../partials/footer') -%>
