--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -31,7 +31,7 @@
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
-                      <label for="classId" class="form-label">Class Id</label>
+                      <label for="classId" class="form-label">Class ID</label>
                       <input type="text" class="form-control" id="classId" name="classId">
                     </div>
                     <div class="mb-3">
