--- a/views/teacher/profile.ejs
+++ b/views/teacher/profile.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="mt-5 mb-5 card">
             <div class="row justify-content-center">
-                <div class="col-md-8 text-center row justify-content-center align-items-center">
+                <div class="col-md-7 text-center row justify-content-center align-items-center">
                     <h2>Tests</h2>
                     <div class=" row justify-content-center align-items-center mb-3">
                         <form class="justify-content-center row" >
@@ -35,7 +35,7 @@
                                 <%} %>
                             </select>
                             </div>
-                            <div class="text-center col-md-4">
+                            <div class="text-center col-md-5">
                                 <button class="  btn btn-sm btn-info">View Test</button>
                             </div>
                             
@@ -65,10 +65,34 @@
                                 >Add Tests</a
                             >
                 </div>
-                <div class="col-md-4 d-flex row text-center  align-items-center justify-content-center " >
+                <div class="col-md-5 d-flex row text-center  align-items-center justify-content-center " >
                     
                     <h3>Students</h3>
-                   
+                   <div class="row justify-content-start align-self-start mb-3">
+                    <% if(students.length == 0){%>
+                        <p>No Students</p>
+                    <%} else {%> 
+                        <table>
+                            <thead class=" ">
+                                
+                                    <tr class=" justify-content-start ">
+                                        <td>Name</td>
+                                        <td>Test</td>
+                                        <td>Grade</td>
+                                    </tr>
+                                    
+                                
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <% for(student of students) {%>
+                                    <td> <%= student.userName %></td>
+                                </tr>
+                                <%}%>
+                            </tbody>
+                        </table>
+                        <%}%>
+                   </div>
                 
                            
                 
