--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -18,7 +18,7 @@
             </div>
             <div class="mt-5 mb-5 card">
                 <div class="row justify-content-center align-self-center">
-                    <div class="col-md-8 text-center row justify-content-center align-self-center"
+                    <div class="col-md-7 text-center row justify-content-center align-self-center"
                     >
                         <h2>Tests</h2>
                         <div
@@ -28,7 +28,7 @@
                                 class="justify-content-center align-self-center row"
                             >
                                 <div class="dropdown row justify-content-s">
-                                    <div class="col-md-6">
+                                    <div class="col-lg-6">
                                         <select
                                             name="testId"
                                             class="col-6 form-select"
@@ -51,7 +51,7 @@
                                             <%} %>
                                         </select>
                                     </div>
-                                    <div class="text-center col-md-4">
+                                    <div class="text-center col-lg-5">
                                         <button class="btn btn-sm btn-info">
                                             View Test
                                         </button>
@@ -90,18 +90,15 @@
                             <%}%>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center row justify-content-center align-self-center"
+                    <div class="col-md-5 text-center row justify-content-start align-self-start"
                     >
                         <h2>Grades</h2>
                         <div class="row mb-3">
-                            <% if(!selectedTest){%>
+                           <%if(!selectedTest){%>
                                 <p>No Test Selected</p>
-                            <%} else if(selectedTest.title == student[0].test && student[0].test.length == 0 ){%>
-                                <p>No Tests Completed</p> 
-                            <%} else {%>
+                            <%}else if(selectedTest.title){%>
                             <p class="text-center fs-5">
-                                <%=selectedTest.title%>
-                            </p>
+                                <%=selectedTest.title%></p>
                             <table>
                                 <thead>
                                     <tr>
@@ -110,15 +107,28 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <%for(let i =0; i < student[0].test.length;
-                                    i+=2) { %>
-                                    <tr>
-                                        <td><%=i%></td>
-                                        <td><%=student[0].test[i+1]%></td>
-                                    </tr>
-                                    <%} %>
+                                    
+                                    <% if(student.length == 0){%>
+                                      <tr>      
+                                            <td>-</td>
+                                            <td>-</td>
+                                      </tr>
+                                        <%} else {%>
+                                            <% for(let i=0; i< student[0].test.length; i+=2){%>
+                                                <tr>
+                                               <td>
+                                                    <%=i%>
+                                                </td>
+                                                <td>
+                                                    <%=student[0].test[i+1]%>
+                                                </td>
+                                            </tr> 
+                                            <%}%>
+                                        <%}%>
+                                    
                                 </tbody>
                             </table>
+                                
                             <%}%> 
                         </div>
                     </div>
