change heading of student signup titie

--- a/views/student/signup.ejs
+++ b/views/student/signup.ejs
@@ -5,8 +5,8 @@
             <div class="row justify-content-around">
               <div class="col-md-5 col-sm-5 card-header d-flex row align-items-center justify-content-center bg-info">
                 <div>
-                  <img src="/imgs/student.png" class="img-fluid" alt="student sign-in image">
-                  <p class="card-title fs-6 text-center">Student SignUp</p>
+                  <img src="/imgs/student.png" class="img-fluid width" alt="student sign-in image">
+                  <h3 class="card-title text-center">Student SignUp</h3>
                 </div>
               </div>
               <div class="col-md-7 col-sm-8 card-body row text-center justify-content-center">
