--- a/views/teacher/profile.ejs
+++ b/views/teacher/profile.ejs
@@ -69,7 +69,7 @@
                     
                     <h3>Students</h3>
                    <div class="row justify-content-start align-self-start mb-3">
-                    <% if(students.length == 0){%>
+                    <% if(testGrades.length == 0){%>
                         <p>No Students</p>
                     <%} else {%> 
                         <table>
@@ -84,11 +84,18 @@
                                 
                             </thead>
                             <tbody>
+                                <% for(student of students) {%>
                                 <tr>
-                                    <% for(student of students) {%>
                                     <td> <%= student.userName %></td>
+                                     <td> <%= testGrades.grades %></td> 
                                 </tr>
                                 <%}%>
+                                <% for(student of students) {%>
+                                    <tr>
+                                        
+                                        
+                                    </tr>
+                                    <%}%>
                             </tbody>
                         </table>
                         <%}%>
