--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -28,7 +28,7 @@
                             <form
                                 class="justify-content-center align-self-center row"
                             >
-                                <div class="dropdown row justify-content-s">
+                                <div class="dropdown row justify-content-start">
                                     <div class="col-lg-6">
                                         <select
                                             name="testId"
