--- a/views/teacher/profile.ejs
+++ b/views/teacher/profile.ejs
@@ -1,112 +1,148 @@
 <%- include('../partials/header') -%>
 <div class="container mt-5 bg-primary">
     <div class="row justify-content-center">
-       <div class="m-5 card col-8 justify-content-center bg-info">
-        <div class=" row bg-white justify-content-evenly">
-            <p class="col-4 ">
-                <strong>User Name</strong>: <%= user.userName %>
-            </p>
-            
-            <div class="col-4 d-flex row justify-content-center align-items-center">
-                <a href="/logout" class=" btn-sm btn btn-info ">Logout</a>
-            </div>
-            
-        </div>
-        <div class="mt-5 mb-5 card">
-            <div class="row justify-content-center">
-                <div class="col-md-7 text-center row justify-content-center align-items-center">
-                    <h2>Tests</h2>
-                    <div class=" row justify-content-center align-items-center mb-3">
-                        <form class="justify-content-center row" >
-                        <div class="dropdown row">
-                            <div class="col-md-6">
-                                <select
-                                name="testId"
-                                class=" col-6 form-select"
-                                aria-label="list of spelling test titles"
-                            >
-                                <option selected disabled>Tests</option>
-                                <%for(let i =0; i < tests.length; i++) { %>
-                                <option
-                                    id="testName"
-                                    value="<%=tests[i]._id%>">
-                                        <%=tests[i].title%>
-                                </option>
-                                <%} %>
-                            </select>
-                            </div>
-                            <div class="text-center col-md-5">
-                                <button class="  btn btn-sm btn-info">View Test</button>
-                            </div>
-                            
-                        </div>
-                        </form>
+        <div class="m-5 card col-8 justify-content-center bg-info">
+            <div class="row bg-white justify-content-evenly">
+                <p class="col-4">
+                    <strong>User Name</strong>: <%= user.userName %>
+                </p>
 
-                    <% if(!selectedTest){%>
-                        <p>No Test Selected</p>
-                    <%} else {%> 
-                        <p class="text-center mt-2 fs-5">
-                                <%=selectedTest.title%>
-                        </p>
-                        
-                        <ul class="list-unstyled text-center">
-                        <% for (word of selectedTest.baseWords) {%>
-                        <li><%=word%></li>
-                        <%}%>
-                        </ul>
-                        <a href="../tests/test/<%=selectedTest._id%>" class="btn-sm btn-primary justify-content-md-center text-center mb-2">
-                        Take Test
-                        </a>
-                        <%}%>
-                    </div>
-                     <a
-                                href="../teacher/add_test"
-                                class=" col-6 btn-sm btn-primary"
-                                >Add Tests</a
-                            >
+                <div
+                    class="col-4 d-flex row justify-content-center align-items-center"
+                >
+                    <a href="/logout" class="btn-sm btn btn-info">Logout</a>
                 </div>
-                <div class="col-md-5 d-flex row text-center  align-items-center justify-content-center " >
-                    
-                    <h3>Students</h3>
-                   <div class="row justify-content-start align-self-start mb-3">
-                    <% if(testGrades.length == 0){%>
-                        <p>No Students</p>
-                    <%} else {%> 
-                        <table>
-                            <thead class=" ">
-                                
-                                    <tr class=" justify-content-start ">
+            </div>
+            <div class="mt-5 mb-5 card">
+                <div class="row justify-content-center align-self-center">
+                    <div
+                        class="col-md-7 text-center row justify-content-center align-self-center"
+                    >
+                        <h2>Tests</h2>
+                        <div
+                            class="row justify-content-center align-items-center mb-3"
+                        >
+                            <form class="justify-content-center align-self-center row">
+                                <div class="dropdown row justify-content-start">
+                                    <div class="col-lg-6">
+                                        <select
+                                            name="testId"
+                                            class="col-6 form-select"
+                                            aria-label="list of spelling test titles"
+                                        >
+                                            <option selected disabled>
+                                                Tests
+                                            </option>
+                                            <%for(let i =0; i < tests.length;
+                                            i++) { %>
+                                            <option
+                                                id="testName"
+                                                value="<%=tests[i]._id%>"
+                                            >
+                                                <%=tests[i].title%>
+                                            </option>
+                                            <%} %>
+                                        </select>
+                                    </div>
+                                    <div class="text-center col-lg-5">
+                                        <button class="btn btn-sm btn-info">
+                                            View Test
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+
+                            <% if(!selectedTest){%>
+                            <p>No Test Selected</p>
+                            <%} else {%>
+                            <p class="text-center mt-2 fs-5">
+                                <%=selectedTest.title%>
+                            </p>
+
+                            <div class="row">
+                                <ul class="list-unstyled text-center col-6">
+                                    <li><strong>Base Words</strong></li>
+                                    <% for (word of selectedTest.baseWords) {%>
+                                    <li><%=word%></li>
+                                    <%}%>
+                                </ul>
+
+                                <ul
+                                    class="list-unstyled text-center align-self-start col-6"
+                                >
+                                    <li><strong>Challenge Words</strong></li>
+                                    <% for (word of selectedTest.challengeWords)
+                                    {%>
+                                    <li><%=word%></li>
+                                    <%}%>
+                                </ul>
+                               
+                            </div>
+                           
+                        <%}%>
+                        </div>
+                         <a
+                            href="../teacher/add_test"
+                            class="btn-sm btn-primary justify-content -md-center text-center col-3 mb-2"
+                            >Add Tests</a
+                        > 
+                    </div>
+                    <div
+                        class="col-md-4 text-center row justify-content-start align-self-start"
+                    >
+                        <h2>Students</h2>
+                        <div
+                            class="row mb-3 "
+                        >
+                            <% if(testResults.length == 0){%>
+                                <p>No Students</p>
+                            <%} else {%>
+                                <table>
+                                <thead class=" ">
+                                    <tr class="justify-content-start">
                                         <td>Name</td>
-                                        <td>Test</td>
                                         <td>Grade</td>
                                     </tr>
-                                    
-                                
-                            </thead>
-                            <tbody>
-                                <% for(student of students) {%>
-                                <tr>
-                                    <td> <%= student.userName %></td>
-                                     <td> <%= testGrades.grades %></td> 
-                                </tr>
-                                <%}%>
-                                <% for(student of students) {%>
-                                    <tr>
-                                        
-                                        
-                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <%if(!selectedTest) {%> 
+                                        <% for(let i = 0; i< students.length; i++) {%>
+                                            <tr>
+                                                <td><%= students[i].userName %></td>
+                                                <td>-</td>
+                                            </tr>
+                                        <%}%>
+                                    <%} else {%> 
+                                        <%for(let i =0; i< testResults.length;i++){%>
+                                             <tr>
+                                                <td><%= students[i].userName %></td>
+                                            <%if(testResults[i][0]!= undefined){%>
+                                                <%for(let j = 0;j< testResults[i][0].grades.length;j++){%>
+                                                    <%if(testResults[i][0].grades[j].test== selectedTest.title){%>
+                                                       
+                                                            <td>
+                                                                <%= testResults[i][0].grades[j].grade %>
+                                                            </td>
+                                                        
+                                                    
+                                                    <%}%>
+                                                <%}%>
+                                            <%} else {%>
+                                            <td>-</td>
+                                            <%}%>
+                                        </tr>
+                                        <%}%>
                                     <%}%>
-                            </tbody>
-                        </table>
-                        <%}%>
-                   </div>
-                
-                           
-                
+                                        
+                                    
+                                </tbody>
+                                </table>
+                            <%}%>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
-    
+    <%- include('../partials/footer') -%>
 </div>
-<%- include('../partials/footer') -%>
