--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
         
         <div class="mb-3 ">
           <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
+            >Email Address</label
           >
           <input
             type="email"
