--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
 <main class="container mt-5 ">
   <div class="row m-3 ">
      <div class=" row m-3 justify-content-center bg-primary">
-        <h2 class="text-white mt-3">Welcome </h2>
+        <h2 class="text-white mt-3">Welcome</h2>
         <div class=" col-6 mb-3">
-           <img src="/imgs/teacher_student.png" alt="home image" class="img-fluid"> 
+           <img src="/imgs/spellwell.png" alt="home image" class="img-fluid"> 
         </div>
          <p class="text-center text-white fs-4">I am a ...</p>
       </div>  
@@ -17,8 +17,74 @@
     </div>
   </div>
    
+  
      
 </main>
-    
+    <div class="row m-4 justify-content-center bg-primary">
+<div class=" row m-3 text-white">
+   <h4 class="text-center">SpellWell is a spelling application designed for students, teachers, and parents. </h4>
+   
+
+   <h5>How It Works</h5>
+   
+      <div class="card mb-3 text-primary">
+         <img src="/imgs/student.png" class="card-img-top img-fluid" alt="...">
+         <div class="card-body">
+           <h5 class="card-title">Student</h5>
+           <p class="card-text">Students can view, take, and get the results of spelling tests added by their teacher. </p>
+           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+      </div>
+       <div class="card mb-3">
+         <img src="/imgs/teacher1.png" class="card-img-top img-fluid" alt="...">
+         <div class="card-body">
+           <h5 class="card-title">Card title</h5>
+           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+       </div>
+       <div class="card mb-3">
+         <img src="/imgs/parent.png" class="card-img-top img-fluid" alt="...">
+         <div class="card-body">
+           <h5 class="card-title">Card title</h5>
+           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+         </div>
+       </div>
+       
+   <p>Teachers can create new tests, and access the results for all their students. For each test, the spelling word is spoken aloud, and the student inputs the correct spelling. Once submitted the test is graded and displayed along with the incorrect words.  Grades and attempts of each test are stored for review by the teacher and parent.</p>
+
+<div class="card text-primary">
+   <h6>For a demonstration of the SpellWell app users can login with the following credentials:</h6>
+<div class="m-3">
+      <table class="justify-content-center align-self-center">
+   <thead>
+      <td>Sample Email</td>
+      <td>Sample Password</td>
+      <td>Description</td>
+     
+   </thead>
+   <tbody>
+      <tr>
+         <td>sample@teacher.com</td>
+         <td>sample@student.com</td>
+         <td>Teacher Demo</td>
+      </tr>
+      <tr>
+         <td>teacherPassword</td>
+         <td>studentPassword</td>
+         <td>Student Demo</td>
+      </tr>
+      
+   </tbody>
+</table>
+</div>
+
+     </div>
+
+* You can also add students to the Sample Teacher, by using the classId: 200*
+</div>
+   
+  </div>
 
 <%- include('partials/footer') -%>
