--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -6,7 +6,9 @@
                 <p class="col-4 align-self-center">
                     <strong>User Name</strong>: <%= user.userName %>
                 </p>
-                
+                <p class="col-4 align-self-center">
+                    <strong>User Id</strong>: <%= user.id.slice(-6) %>
+                </p>
                 <div
                     class="col-4 d-flex row justify-content-center align-self-center  pt-1 pb-3"
                 >
