--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <main class="row m-5 justify-content-center  ">
   <div class=" m-3  ">
-     <div class=" row p-3 justify-content-center bg-primary">
+     <div class=" row p-3 justify-content-center bg-primary rounded">
         <h2 class="text-white mt-3">Welcome</h2>
         <div class=" col-6 mb-3">
            <img src="/imgs/spellwell.png" alt="home image" class="img-fluid"> 
@@ -12,7 +12,7 @@
     <div class="row m-3 mb-4 gap-2 justify-content-center">
         <a href="/student/signup" class=" col-md-3 btn btn-info shadow fs-4">Student</a>
         <a href="/teacher/signup" class="col-md-3 btn btn-info shadow fs-4">Teacher</a>
-        <a href="/student/signup" class=" col-md-3 btn btn-info shadow fs-4">Parent</a>
+        <a href="/parent/signup" class=" col-md-3 btn btn-info shadow fs-4">Parent</a>
        <a href="/login"class="col col-12  text-center fs-5">Login</a>
         
     </div>
@@ -64,7 +64,7 @@
                </div>
             </a>
 
-            <a href="/teacher/signup" class="col-md-3 btn btn-info shadow rounded">
+            <a href="/parent/signup" class="col-md-3 btn btn-info shadow rounded">
                <div class="bg-transparent">
          <img src="/imgs/parent.png" class="card-img-top img-fluid mt-3" alt="cartoon of a parent and child with backpack">
          <div class="card-body">
